src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Population__c</fullName>
        <label>Account Population</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorized_Products__c</fullName>
        <label>Authorized Products</label>
        <picklist>
            <picklistValues>
                <fullName>Automotive Fluid Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEACON AMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blancett</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete Fluid Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coriolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Acquisition / Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynasonics Ultrasonic Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Series Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flo-Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Dynamics Calibration Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Dynamics Calibrator Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galaxy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impeller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Oval Gear (IOG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Turbo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ModMAG M-Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitors / Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preso DP Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Racine Vortex Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recordall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Control Valves (RCV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services/Technical Field Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vortex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyco Tool</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>BMI_Territory__c</fullName>
        <label>BMI Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Badger_Meter_Business_Unit__c</fullName>
        <label>Badger Meter Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyco</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BigMachines__Partner_Organization__c</fullName>
        <label>BigMachines Partner Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Carrier_Code__c</fullName>
        <label>Carrier/Carrier Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <label>Channel Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <inlineHelpText>This field designates if the commission lies with Badger Meter or the Sales Channel</inlineHelpText>
        <label>Commission</label>
        <picklist>
            <picklistValues>
                <fullName>Badger Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Channel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitive_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitive Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Street__c</fullName>
        <label>Corporate Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <label>Credit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Customer_Value__c</fullName>
        <label>Current Customer Value</label>
        <picklist>
            <picklistValues>
                <fullName>&gt;$250K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;$5K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5K&lt;25K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$25K&lt;$250K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <externalId>true</externalId>
        <label>Customer Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Registration_Number__c</fullName>
        <label>Customer Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Segment__c</fullName>
        <label>Customer Segment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>CSR involved in the Account</inlineHelpText>
        <label>Customer  Service Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Account (Customer  Service Rep)</relationshipLabel>
        <relationshipName>CSR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Tax_Code__c</fullName>
        <label>Customer Tax Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DI_A_External_ID__c</fullName>
        <description>This external ID will hold the Customer Number from LX as part of the Integration process. The LX system will populate this field based on the LX creation of a new Company record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This external ID will hold the Customer Number from LX as part of the Integration process. The LX system will populate this field based on the LX creation of a new Company record.</inlineHelpText>
        <label>DI A External ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DM_A_External_ID__c</fullName>
        <description>This holds the migration value (sql key) from the Company table of the Pivotal system.</description>
        <externalId>true</externalId>
        <inlineHelpText>This holds the migration value (sql key) from the Company table of the Pivotal system.</inlineHelpText>
        <label>DM A External ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>D_B_Credit_Rating__c</fullName>
        <label>D&amp;B Credit Rating</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <!---->
    <fields>
        <fullName>Data_Loader_ID__c</fullName>
        <label>Data Loader ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Warehouse__c</fullName>
        <label>Default Warehouse</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dont_fax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dont fax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EDI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>55</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Parent_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Parent ID</label>
        <length>55</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Final_Products__c</fullName>
        <label>Final Product Dest.</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Terms_Code__c</fullName>
        <label>Freight Terms Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Market__c</fullName>
        <description>This was a DBA field. We needed to rename this field in order to implement a more universally correct term (Sales Region) amongst the scottsdale &amp; non-scottsdale users.</description>
        <label>Global Market</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Bill_To__c</fullName>
        <label>Has Bill To</label>
        <summaryFilterItems>
            <field>Alternative_Addresses__c.Type__c</field>
            <operation>equals</operation>
            <value>Bill To</value>
        </summaryFilterItems>
        <summaryForeignKey>Alternative_Addresses__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Length_of_Sales_Credit_Number__c</fullName>
        <formula>LEN( Sales_Credit_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Length of Sales Credit Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Load_File__c</fullName>
        <description>The source file name - for relationship building in the Account Relationship table</description>
        <label>Load File</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Gas_Services__c</fullName>
        <label>Number Of Gas Services</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Services_Galaxy__c</fullName>
        <label>Number Of Services Galaxy</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Services_Total__c</fullName>
        <label>Number Of Services Total</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Won_Opportunities__c</fullName>
        <label>Number Of Won Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Electric_Services__c</fullName>
        <label>Number of Electric Services</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Type__c</fullName>
        <label>Office Type</label>
        <picklist>
            <picklistValues>
                <fullName>Branch Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <inlineHelpText>Select the company type</inlineHelpText>
        <label>Organization Type</label>
        <picklist>
            <picklistValues>
                <fullName>Utility Distributor (UD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instrumentation Representative (IR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Customer (UC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Other (DC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instrumentation Customer (IC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instrumentation Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PivotalID__c</fullName>
        <label>PivotalID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Customer_Number__c</fullName>
        <label>Pricing Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_on_Acknowledgement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print on Acknowledgement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_on_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print on Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority_Code__c</fullName>
        <label>Priority Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Comments__c</fullName>
        <label>Quote Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Route_Code_Price_Indicator__c</fullName>
        <label>Route Code/Price Indicator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Channel Partner</label>
        <referenceTo>Sales_Channel_Partner__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Credit_Number__c</fullName>
        <label>Sales Credit Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Region</label>
        <referenceTo>Sales_Territory__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <label>Sales Territory</label>
        <picklist>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ship_Hold_Code__c</fullName>
        <label>Ship Hold Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Number__c</fullName>
        <label>Ship To Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <label>Sub Industry</label>
        <picklist>
            <controllingField>Industry</controllingField>
            <picklistValues>
                <fullName>Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLT manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calibration Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chillers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Component Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Systems integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custody Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dyno manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emission Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engine Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engine rebuilder-Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engine Test Systems</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sum_of_Won_Opportunities__c</fullName>
        <label>Sum of Won Opportunities</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tax_Identifier__c</fullName>
        <label>Tax Identifier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Sales_Manager_Id__c</fullName>
        <label>Territory Sales Manager Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Top Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Services__c</fullName>
        <label>Total Number of Services</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_As_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use As Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2011_Total_Sales__c</fullName>
        <label>2011 Total Sales</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTD_2011_Sales__c</fullName>
        <label>YTD 2011 Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_2012_Sales__c</fullName>
        <label>YTD 2012 Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>authorized_market__c</fullName>
        <label>Authorized Market</label>
        <picklist>
            <picklistValues>
                <fullName>Valve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial / HVAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chem / Petrochem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irrigation / Water Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipal Water / Wastewater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Automation &amp; Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test &amp; Measurement</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Badger_Meter_Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Channel_Partners</fullName>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Badger_Meter_Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Channel_Partner</value>
        </filters>
        <label>All Channel Partners</label>
    </listViews>
    <listViews>
        <fullName>All_End_Customers</fullName>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Badger_Meter_Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.End_Customer</value>
        </filters>
        <filters>
            <field>Customer_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All End Customers</label>
    </listViews>
    <listViews>
        <fullName>All_Prospects</fullName>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Badger_Meter_Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.End_Customer</value>
        </filters>
        <filters>
            <field>Customer_Number__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Prospects</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Badger_Meter_Business_Unit__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Channel_Partners</fullName>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Badger_Meter_Business_Unit__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Channel_Partner</value>
        </filters>
        <label>My Channel Partners</label>
    </listViews>
    <listViews>
        <fullName>My_End_Customers</fullName>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Badger_Meter_Business_Unit__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.End_Customer</value>
        </filters>
        <filters>
            <field>Customer_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>My End Customers</label>
    </listViews>
    <listViews>
        <fullName>My_Prospects</fullName>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Badger_Meter_Business_Unit__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.End_Customer</value>
        </filters>
        <filters>
            <field>Customer_Number__c</field>
            <operation>equals</operation>
        </filters>
        <label>My Prospects</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Badger_Meter_Business_Unit__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Channel_Partner</fullName>
        <active>true</active>
        <label>Channel Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>End_Customer</fullName>
        <active>true</active>
        <label>End Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <label>Other</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>